# sid

./: .gitignore  Makefile.am  README.md  call.cpp  call.hpp  configure.ac  likelihoods.cpp  likelihoods.hpp  lynch.cpp  lynch.hpp  optimization.hpp  pgsid.cpp  pileup.cpp  pileup.hpp  pileup_parser.cpp  pileup_parser.hpp  pqsid.cpp  profiles.cpp  profiles.hpp  pssid.cpp  sid.cpp  sid2.cpp  simplex.cpp  simplex.hpp  stats.cpp  stats.hpp
scripts/: README.md  ensembl_exons.py  nonsynonymous.py  prepare-data.sh
scripts/gatk-pipeline/: filter-exon-sites.sh  identify-nonsyn.sh  parallel-run-gatk.sh  run-gatk.sh
scripts/samtools-pipeline/: parallel-run-sam.sh  run-sam.sh
scripts/sid-pipeline/: filter-exon-sites.sh  identify-nonsyn.sh  parallel-run-sid.sh  run-sid.sh  run.sh
test/: Makefile.am  test-call.cpp  test-likelihoods.cpp  test-pileup_parser.cpp  test-profiles.cpp  test.cpp
